--- a/index.html
+++ b/index.html
@@ -3,18 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Link -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/style.css">
     <title>Board</title>
 </head>
 <body>
     <div class="boards">
         <div class="board">
-            <h3></h3>
+            <h3>To Do</h3>
             <div class="dropzone">
-                <div class="status"></div>
-                <div class="content"></div>
+                <div class="card" draggable="true">
+                    <div class="status green"></div>
+                    <div class="content">Task One</div>
+                </div>
             </div>
         </div>
-    </div>
-    
+
+        <div class="board">
+            <h3>Doing</h3>
+            <div class="dropzone">
+                <div class="card" draggable="true">
+                    <div class="status red"></div>
+                    <div class="content">Task Two</div>
+                </div>
+            </div>
+        </div>
+
+        <div class="board">
+            <h3>Testing</h3>
+            <div class="dropzone">
+                <div class="card" draggable="true">
+                    <div class="status blue"></div>
+                    <div class="content">Task Three</div>
+                </div>
+            </div>
+        </div>
+
+        <div class="board">
+            <h3>Done</h3>
+            <div class="dropzone">
+                <div class="card" draggable="true">
+                    <div class="status yellow"></div>
+                    <div class="content">Task Four</div>
+                </div>
+            </div>
+        </div>
+    </div>    
 </body>
 </html>
